--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark" ; <div class="container-fluid">
-    <img src="/1e50539cfd8a4cda8f90fa69e6d1b8c0.jpg" alt="Logo" width="100" height="100"
-      class="d-inline-block align-text-top">
+    <img
+      src="https://rare-gallery.com/thumbs/4513759-action-figures-3d-desktop-deadpool-iron-man.jpg"
+      alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
     Bootstrap
     <a class="navbar-brand" href="#">Action Figures</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
