--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark" ; <div class="container-fluid">
     <img
-      src="https://rare-gallery.com/thumbs/4513759-action-figures-3d-desktop-deadpool-iron-man.jpg"
-      alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
-    Bootstrap
+      src="https://e1.pxfuel.com/desktop-wallpaper/782/694/desktop-wallpaper-cool-iron-man-marvel-comic-2020-cool-iron-man.jpg"
+      alt="Logo" width="330" height="207" class="d-inline-block align-text-top">
     <a class="navbar-brand" href="#">Action Figures</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
