--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             mais
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Lista de desejos</a></li>
-            <li><a class="dropdown-item" href="#">Compradas</a></li>
+            <li><a id="filtrar_pendentes" class="dropdown-item" href="#">Lista de desejos</a></li>
+            <li><a id="filtrar_concluidas" class="dropdown-item" href="#">Finalizados</a></li>
             <li>
               <hr class="dropdown-divider" />
             </li>
